<resources>
	<string name="app_name">MediaCenter</string>
	<string name="ftp">FTP:</string>
	<string name="samba">SAMBA:</string>
	<string name="num">21</string>
	<string name="dla">UPNP</string>
	<string name="nu">"/sdcard/share"</string>
	<string name="str_Exam">"//192.168.100.38/work"</string>
	<string name="registered_chars">"_-.0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"</string>
	<string name="notice">Warning</string>
	<string name="music">Audio</string>
	<string name="video">Video</string>
	<string name="image">Picture</string>
	<string name="add_filter">Add filter</string>
	<string name="remove_filter">Delete filter</string>
	<string name="operation">Operation</string>
	<string name="cut">Cut</string>
	<string name="paste">Paste</string>
	<string name="copy">Copy</string>
	<string name="delete">Delete</string>
	<string name="str_rename">Rename</string>
	<string name="str_new">New</string>
	<string name="search">Search</string>
	<string name="eject_cdrom">Eject_CDROM</string>
	<string name="help">Help</string>
	<string name="no_file">No such file or directory</string>
	<string name="no_type">The format is not supported</string>
	<string name="no_play">Play Error</string>
	<string name="ok">Ok</string>
	<string name="cancel">Cancel</string>
	<string name="select_file">Please select the file</string>
	<string name="new_dir">New Folder</string>
	<string name="new_file">New File</string>
	<string name="Rename_null">File name or Folder name can not be null</string>
	<string name="your_file">The specified file/folder%1$s With the same name file/folder</string>
	<string name="ok_add">Are you sure create the %1$s %2$s?</string>
	<string name="file">File</string>
	<string name="dir">Folder</string>
	<string name="builded">Has been created</string>
	<string name="error">Error!</string>
	<string name="error_type">Please enter the correct format (does not include//)</string>
	<string name="not_search">Can not search the root directory</string>
	<string name="input_keyword">Please enter a keyword</string>
	<string name="not_look">No preview</string>
	<string name="outer_catalog">Is the outermost layer of the directory</string>
	<string name="override_file">File already exists,are you sure overwrite anyway?</string>
	<string name="paste_error">Paste failed</string>
	<string name="paste_v">Paste success</string>
	<string name="sub_dir">Destination folder is the source folder subfolders</string>
	<string name="ok_delete">Are you sure you want to delete the %1$s?</string>
	<string name="delete_v">Delete success</string>
	<string name="delete_none">please select items</string>
	<string name="delete_error">Delete failed</string>
	<string name="name_no_update">Unmodified the name</string>
	<string name="ok_update">Are you sure update %1$s%2$s name %3$s?</string>
	<string name="update_name_ok">Successfully modify the file name</string>
	<string name="update_name_error">Modify the file name wrong</string>
	<string name="add_ok">Successfully added</string>
	<string name="folder_is_empty">the folder is empty</string>
	<string name="select_type">Please select the conditions!</string>
	<string name="close">Close</string>
	<string name="file_name">Name</string>
	<string name="update_time">ModifyTime</string>
	<string name="file_size">Size</string>
	<string name="file_location">File Location</string>
	<string name="parent_directory">Parent directory</string>
	<string name="help_title">Help Manual</string>
	<string name="suffix">Please enter a suffix</string>
	<string name="str_Ex">Example:</string>
	<string name="str_name">Account:</string>
	<string name="str_pass">Password:</string>
	<string name="str_service">server:</string>
	<string name="str_anonymous">Anonymous:</string>
	<string name="dispaly">ServerName:</string>
	<string name="new_server">Add a service by menu->new->service</string>
	<string name="hide_tabs">HideTabs</string>
	<string name="show_tabs">ShowTabs</string>
	<string name="input_server">Server should not empty</string>
	<string name="input_name_pass">Account or PassWord should not empty</string>
	<string name="adding_server">Adding Server</string>
	<string name="please_waitting">please waiting...</string>
	<string name="str_server">new</string>
	<string name="server">Server:</string>
	<string name="port">Port:</string>
	<string name="user_name">Account:</string>
	<string name="user_pass">Password:</string>
	<string name="nick_name">NickName:</string>
	<string name="anonymity">Anonymity</string>
	<string name="hide_tab">HideTAB</string>
	<string name="show_tab">ShowTAB</string>
	<string name="add_server">New</string>
	<string name="delete_server">Delete</string>
	<string name="edit_server">Edit</string>
	<string name="quit_server">Quit</string>
	<string name="ip_address">Ip Address:</string>
	<string name="server_folder">Server Folder:</string>
	<string name="local_folder">Local Folder:</string>
	<string name="ip_address1">Ip Address</string>
	<string name="server_folder1">Server Folder</string>
	<string name="local_folder1">Local Folder</string>
	<string name="is_auto">Automatic Mount</string>
	<string name="cancle_auto">Cancel Auto</string>
	<string name="add_auto">Mount</string>
	<string name="null_server">Server address can not empty</string>
	<string name="null_user">In anonymity status name/password can not empty</string>
	<string name="adding_server_Error">adding server Error</string>
	<string name="folder_position">Directory:</string>
	<string name="uninstall">uninstall</string>
	<string name="login_fail">Fail to connect the server</string>
	<string name="str_upload">Upload</string>
	<string name="upload_succ">Upload the file successed</string>
	<string name="download_succ">Download the file successed</string>
	<string name="download_fail">Download the file failed</string>
	<string name="upload_fail">Upload the file failed</string>
	<string name="connect_fail">Fail to get the file list</string>
	<string name="connecting">connecting...</string>
	<string name="down_file">Down</string>
	<string name="del_file">Delete File</string>
	<string name="del_folder">Delete Folder</string>
	<string name="file_rename">Rename File</string>
	<string name="d_deleting">Folder is deleting...</string>
	<string name="f_deleting">File is deleting...</string>
	<string name="f_downing">File is downing...</string>
	<string name="s_down">Are you sure to download the %1$d file?</string>
	<string name="s_delete">Are you sure delete the %1$d file?</string>
	<string name="d_delete">Are you sure delete the folder?</string>
	<string name="servers">Server:</string>
	<string name="serverBtn">Server</string>
	<string name="nfsAddHint">content of %1$s editor cannot be empty</string>
	<string name="nfsDlgOpts">add/cancel auto-mounted</string>
	<string name="yesStr">Ok</string>
	<string name="cancelStr">Cancel</string>
	<string name="OptsStr">Operations</string>
	<string name="optUninstallStr">select directories to uninstall</string>
	<string name="named">folder name is exists</string>
	<string name="new_server_error">new server error</string>
	<string name="no_server">no server</string>
	<string name="delete_server_error">delete server error</string>
	<string name="delete_conn">Sure to delete the server</string>
	<string name="quit_conn">Sure to cut the server</string>
	<string name="file_exist">The file is not exist</string>
	<string name="folder_exist">The folder is not exist</string>
	<string name="name_long">The file name length can not over 128</string>
	<string name="name_falid">The file name can not contains these character:/\\:*?\&quot;&lt;&gt;|</string>
	<string name="suffix_long">The file suffix length can not over 10</string>
	<string name="suffix_falid">The file suffix can not contains these character:/\\:*?\&quot;&lt;&gt;|</string>
	<string name="file_up">The file is uploading...</string>
	<string name="choice_file">You have not choice the file,please choice</string>
	<string name="no_downfile">Have no download or delete file</string>
	<string name="sdcard_dele">Sdcard have not mount</string>
	<string name="noRdoBtnSltedOrEpyName">either no category is selected or name is empty</string>
	<string name="sdcard_space">The sdcard have no avaiable space</string>
	<string name="no_conn">No Server Connection</string>
	<string name="sdcard_no_capacity">no more capacity to store things</string>
	<string name="no_item_to_rename">no item to be renamed</string>
	<string name="no_volume_mount">no more capacity to mount server</string>
	<string name="user_in">The user using the connect</string>
	<string name="no_search_file">Not found the match file</string>
	<string name="suffix_exist">Filter types already exists</string>
	<string name="has_exist">%1$s has exists</string>
	<string name="edit">Edit</string>
	<string name="nick_exist">The nickname has exist,Please enter again</string>
	<string name="type_undelete">%1$s is the default filter types, can not deleted</string>
	<string name="local_tab_title">Store</string>
	<string name="lan_tab_title">LAN</string>
	<string name="ftp_tab_title">FTP</string>
	<string name="nfs_tab_title">NFS</string>
	<string name="quit_app">Again pull down then quit the application</string>
	<string name="no_file_choice">No file to upload</string>
	<string name="portID">portID:</string>
	<string name="suffix_no">The filter type is null</string>
	<string name="name_empty">The file can not enter null</string>
	<string name="input_not_null">input cannot be empty</string>
	<string name="select_server_added_to_list">Please select servers to add to main list</string>
	<string name="network_error">network error, please check network state</string>
	<string name="no_content">no content</string>
	<string name="no_share_directory">no share directory</string>
	<string name="no_folder_pos_empty">no folder position</string>
	<string name="new_mout_successfully">Mount Successfully</string>
	<string name="port_null">The portId can not empty</string>
	<string name="position_null">The file position can not empty or equal to root path</string>
	<string name="invalid_path">Invalid file path</string>
	<string name="server1">Server</string>
	<string name="user_name1">Account</string>
	<string name="user_pass1">Password</string>
	<string name="nick_name1">NickName</string>
	<string name="dir_name">Directory</string>
	<string name="server_name">ServerName</string>
	<string name="wait_str">Wait</string>
	<string name="search_str">Searching servers...</string>
	<string name="paste_str">Pasting files......</string>
	<string name="invalid_str">Illegal mount position</string>
	<string name="server_ip_fmt_err">Server Address Content Format Error</string>
	<string name="new_mout_fail">Mount Fail</string>
	<string name="set_success">Set Successfully</string>
	<string name="set_fail">Set Fail</string>
	<string name="user_or_pass">Account or password is not corrent</string>
	<string name="confirm_delete_dlg_title">Confirm delete dialog</string>
	<string name="pos_delete_failed">%1$s deleted failed</string>
	<string name="del_server_dlg_title">Delete dialog</string>
	<string name="comfirm_delete_hint">Are you sure to delete these?</string>
	<string name="work_path">Directory</string>
	<string name="work_path_null">The Shared directory can not empty</string>
	<string name="mount_exist">The server have mounted,please change the server or directory</string>
	<string name="no_item_selected">you do not select any server item</string>
	<string name="net_time_out">search time out</string>
	<string name="add_shortcut">Add Shortcut</string>
	<string name="all_network">All NetWork</string>
	<string name="rename_dlg_title">Rename dialog</string>
	<string name="add_short_succ">Add the shortcut success</string>
	<string name="file_info_name">FileName：</string>
	<string name="file_info_size">FileSize：</string>
	<string name="file_info_modify_time">ModifyTime：</string>
	<string name="file_info_type">FileType：</string>
</resources>