<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="400dip" android:layout_height="wrap_content"
  android:orientation="vertical" android:gravity="center">
  <LinearLayout android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dip">
    <TextView android:textSize="20px" android:id="@+id/textView"
      android:layout_width="120dip" android:layout_height="wrap_content"
      android:text="@string/servers" android:gravity="right" />
    <EditText android:id="@+id/editServer" android:layout_width="270dip"
      android:layout_height="wrap_content" android:singleLine="true"
      android:hint="@string/server1"
      android:digits="1234567890."
      android:inputType="phone"
      android:maxLength="20"/>
  </LinearLayout>

  <LinearLayout android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <TextView android:textSize="20px" android:layout_width="120dip"
      android:layout_height="wrap_content" android:text="@string/folder_position"
      android:gravity="right" />
    <EditText android:id="@+id/position" android:layout_width="270dip"
      android:layout_height="wrap_content" android:singleLine="true"
            android:hint="@string/work_path"/>
  </LinearLayout>

  <LinearLayout android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <TextView android:textSize="20px" android:id="@+id/textName"
      android:layout_width="120dip" android:layout_height="wrap_content"
      android:text="@string/str_name" android:gravity="right" />
    <EditText android:id="@+id/editName" android:layout_width="270dip"
      android:layout_height="wrap_content" android:singleLine="true"
      android:hint="@string/user_name1"
    android:maxLength="20"/>
  </LinearLayout>

  <LinearLayout android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <TextView android:textSize="20px" android:id="@+id/textpass"
      android:layout_width="120dip" android:layout_height="wrap_content"
      android:text="@string/str_pass" android:gravity="right" />
    <EditText android:id="@+id/editpass" android:layout_width="270dip"
      android:layout_height="wrap_content" android:password="true"
      android:singleLine="true"
       android:hint="@string/user_pass1"
    android:maxLength="20"/>
  </LinearLayout>

  <LinearLayout android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <TextView android:textSize="20px" android:layout_width="120dip"
      android:layout_height="wrap_content" android:text="@string/dispaly"
      android:gravity="right" />
    <EditText android:id="@+id/editdisplay" android:layout_width="270dip"
      android:layout_height="wrap_content" android:singleLine="true"
       android:hint="@string/server_name"
    android:maxLength="50" android:focusable="false"/>
  </LinearLayout>

  <CheckBox
    android:id="@+id/add_shortcut"
    android:checked="true"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/add_shortcut"
    android:layout_marginLeft="70dip"
    android:nextFocusDown="@+id/myOkBut"
  />

  <LinearLayout android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:gravity="center">
    <Button android:layout_width="100dip" android:layout_height="40dp"
        android:background="@drawable/butselector" android:textColor="#FFFFFF"
        android:layout_marginLeft="64dp"
            android:layout_marginRight="20dp"
      android:text="@string/ok" android:id="@+id/myOkBut" />
    <Button android:layout_width="100dip" android:layout_height="40dp"
        android:background="@drawable/butselector" android:textColor="#FFFFFF"
      android:id="@+id/myCancelBut" android:text="@string/cancel" />
  </LinearLayout>
</LinearLayout>
