<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dip"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/servers"
            android:textSize="20px" />

        <EditText
            android:id="@+id/ipAddress1"
            android:layout_width="280dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dip"
            android:digits="1234567890."
            android:hint="@string/ip_address1"
            android:inputType="phone"
            android:maxLength="20"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/folder_position"
            android:textSize="20px" />

        <EditText
            android:id="@+id/serverFolder1"
            android:layout_width="280dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dip"
            android:hint="@string/server_folder1"
            android:maxLength="50"
            android:singleLine="true" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/add_shortcut"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dip"
        android:checked="true"
        android:nextFocusDown="@+id/myOkBut"
        android:text="@string/add_shortcut" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
         >

        <Button
            android:id="@+id/myOkBut"
            android:layout_width="100dip"
            android:layout_height="40dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/butselector"
            android:text="@string/ok"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/myCancelBut"
            android:layout_width="100dip"
            android:layout_height="40dp"
            android:background="@drawable/butselector"
            android:text="@string/cancel"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>