<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content" android:layout_height="wrap_content"
	android:padding="10dp">
	<TextView android:layout_width="170dp" android:layout_height="wrap_content"
		android:textSize="24px" android:text="@string/file_info_name"
		android:gravity="right" android:id="@+id/file_name_title" />
	<TextView android:layout_width="400dp" android:layout_height="wrap_content"
		android:textSize="24px" android:gravity="left" android:id="@+id/file_name"
		android:layout_toRightOf="@id/file_name_title" />

	<TextView android:layout_width="170dp" android:layout_height="wrap_content"
		android:textSize="24px" android:text="@string/file_info_type"
		android:gravity="right" android:id="@+id/file_type_title"
		android:layout_below="@id/file_name" />
	<TextView android:layout_width="400dp" android:layout_height="wrap_content"
		android:textSize="24px" android:gravity="left"
		android:layout_alignTop="@id/file_type_title" android:id="@+id/file_type"
		android:layout_toRightOf="@id/file_type_title" />

	<TextView android:layout_width="170dp" android:layout_height="wrap_content"
		android:textSize="24px" android:text="@string/file_info_size"
		android:gravity="right" android:id="@+id/file_size_title"
		android:layout_below="@id/file_type" />
	<TextView android:layout_width="400dp" android:layout_height="wrap_content"
		android:textSize="24px" android:gravity="left"
		android:layout_alignTop="@id/file_size_title" android:id="@+id/file_size"
		android:layout_toRightOf="@id/file_size_title" />

	<!--
		<TextView android:layout_width="150dp"
		android:layout_height="wrap_content" android:textSize="24sp"
		android:text="@string/file_info_create_time" android:gravity="right"
		android:id="@+id/file_create_title"
		android:layout_below="@id/file_size" /> <TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:textSize="24sp"
		android:gravity="left" android:layout_alignTop="@id/file_create_title"
		android:id="@+id/file_create"
		android:layout_toRightOf="@id/file_create_title" />
	-->
	<TextView android:layout_width="170dp" android:layout_height="wrap_content"
		android:textSize="24px" android:text="@string/file_info_modify_time"
		android:gravity="right" android:id="@+id/file_modify_title"
		android:layout_below="@id/file_size" />
	<TextView android:layout_width="400dp" android:layout_height="wrap_content"
		android:textSize="24px" android:gravity="left"
		android:layout_alignTop="@id/file_modify_title" android:id="@+id/file_modify"
		android:layout_toRightOf="@id/file_modify_title" />
</RelativeLayout>
