<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="5dip"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/notice"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="2px"
            android:text="@string/notice"
            android:textSize="18sp" >
        </TextView>

        <TextView
            android:id="@+id/new_file_notice"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:layout_gravity="center_horizontal"
            android:padding="2px"
            android:textSize="18sp" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/but_ok"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginRight="40dp"
            android:layout_weight="1"
            android:background="@drawable/butselector"
            android:text="@string/ok"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <Button
            android:id="@+id/but_cancle"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/butselector"
            android:text="@string/cancel"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
